# SUSPEKT

./: .env  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
static/: style.css
templates/: base.html  confirmation.html  manage_colors.html  nav.html  results.html  training.html  upload.html
webapp/: .env  .gitignore  Dockerfile  README.md  beschichtung.json  check_cuda.py  colors.json  compose.yaml  config.py  inventory_routes.py  measurement.py  neo4jIntegration.py  nginx.conf  processImage.py  requirements.txt  resource_efficiency.py  trainingDataCollector.py  transport_emission.py  videoDetection.py
webapp/docs/: deployment.md
webapp/docs/neo4j/: graph-export.csv  node-export.csv  relationship-export.csv
webapp/templates/: demonstratorUI.html  error.html  footer.html  inventory.html  login.html  nubsdetection.html  nubsdetectionwebcam.html  resource_efficiency.html  review_results.html  statusUpload.html  upload_old.html  videoDetection.html
webapp/webapp/: auth.py  beschichtungDetection.py  class_properties.py  combineYOLOModels.py  conditionDetection.py  config.py  decorDetection.py  model.py  modelTraining.py  neo4j_database.py  user_db_models.py  visualize.py
